#pragma once

struct state {
    int value;
};
